Cimi Production KW/src/objects/DS_DATA__c.object
<CustomObject>
    <fields>
        <fullName>ALLOW_MODIFY__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Modify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age_Range__c</fullName>
        <label>Age_Range</label>
        <picklist>
            <picklistValues>
                <fullName>0_5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5_5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3_21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4_10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6_18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6_21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7_18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7_21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11_17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12_18</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Blocker_ID__c</fullName>
        <label>Blocker ID</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CODELIST__c</fullName>
        <label>Codelist</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CODE__c</fullName>
        <label>CODE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data_Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_Field__c</fullName>
        <label>Describe_Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FILE_NAME__c</fullName>
        <label>File_name</label>
        <picklist>
            <picklistValues>
                <fullName>BASELINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRAUMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOLLOWUP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <label>Form</label>
        <picklist>
            <picklistValues>
                <fullName>DS_BIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_BSLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_CANSTR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_CBCL_0_5_B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_CBCL_0_5_F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_CBCL_6_18_B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_CBCL_6_18_F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_CLINEVAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_DEMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_DOMENV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_FAPGAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_FOLLOWUPINFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_HEALTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_INDSEV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_INSDOMENV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_MILITARY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_NCTSNTREAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_NOMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_POST_NOMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_PTSD_CA_B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_PTSD_CA_F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_REFIMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_SDQ_P_04_10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_SDQ_P_11_17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_SDQ_S_11_17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_SERVREC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_YCINDSEV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRABUSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRACCIDENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRBEREAVE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gender_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Boy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Girl</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LONGLABEL__c</fullName>
        <label>LONGLABEL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LONG_DESCRIPTION__c</fullName>
        <label>Long_Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <label>Page</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentile__c</fullName>
        <label>Percentile</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Field__c</fullName>
        <label>Question_Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raw_Score__c</fullName>
        <label>Raw_Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOURCE_FORM__c</fullName>
        <label>Source_form</label>
        <picklist>
            <picklistValues>
                <fullName>BIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANSTR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBCL_SCORES_OLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBCL_SCORES_YOUNG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLINEVAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOMENV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_CBCL_0_5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_CBCL_0_5_B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_CBCL_0_5_F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_CBCL_6_18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_CBCL_6_18_B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_CBCL_6_18_F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAPGAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAPGAR_SCORES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOLLOWUPINFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEALTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDSEV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INSDOMENV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MILITARY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCTSNTREAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTSD_CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTSD_SCORES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REFIMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SDQ_P_04_10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SDQ_P_11_17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SDQ_PARENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SDQ_S_11_17</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scale_Number__c</fullName>
        <formula>CASE( Scale__c, &quot;I&quot;, 1, &quot;II&quot;, 2, &quot;III&quot;, 3, &quot;IV&quot;, 4, &quot;V&quot;, 5, &quot;VI&quot;, 6, &quot;VII&quot;, 7, &quot;VIII&quot;, 8, &quot;Other&quot;, 9, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scale_Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scale__c</fullName>
        <label>Scale</label>
        <picklist>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sig_Range__c</fullName>
        <label>Sig_Range</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borderline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Symptom__c</fullName>
        <label>Symptom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Score__c</fullName>
        <label>T_Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VARIABLE_LABEL__c</fullName>
        <label>Variable_label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VARIABLE_NAME__c</fullName>
        <label>Variable_name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VARIABLE_NUMBER__c</fullName>
        <label>Variable_number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VARIABLE_TYPE__c</fullName>
        <label>Variable_type</label>
        <picklist>
            <picklistValues>
                <fullName>NUMBER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHAR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VARIABLE_VALUE__c</fullName>
        <label>Variable_value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Variable__c</fullName>
        <label>Variable</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DS DATA</label>
    <listViews>
        <fullName>AllBlank</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Data_Type__c</columns>
        <columns>Page__c</columns>
        <columns>Variable__c</columns>
        <columns>Category__c</columns>
        <columns>Content__c</columns>
        <columns>Field__c</columns>
        <columns>Form__c</columns>
        <columns>Number__c</columns>
        <columns>Object__c</columns>
        <columns>Question_Field__c</columns>
        <columns>SOURCE_FORM__c</columns>
        <columns>Symptom__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Type__c</field>
            <operation>equals</operation>
        </filters>
        <label>AllBlank</label>
    </listViews>
    <listViews>
        <fullName>Blocker</fullName>
        <columns>NAME</columns>
        <columns>ALLOW_MODIFY__c</columns>
        <columns>Blocker_ID__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Type__c</field>
            <operation>equals</operation>
            <value>DS_Blocking</value>
        </filters>
        <label>Blocker</label>
    </listViews>
    <listViews>
        <fullName>CBCL_Form_Info</fullName>
        <columns>NAME</columns>
        <columns>Data_Type__c</columns>
        <columns>Symptom__c</columns>
        <columns>Scale__c</columns>
        <columns>Content__c</columns>
        <columns>Number__c</columns>
        <columns>Question_Field__c</columns>
        <columns>Type__c</columns>
        <columns>Object__c</columns>
        <columns>Form__c</columns>
        <columns>FILE_NAME__c</columns>
        <columns>Age_Range__c</columns>
        <columns>SOURCE_FORM__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Type__c</field>
            <operation>equals</operation>
            <value>DS_CBCL_Form_Info</value>
        </filters>
        <label>CBCL Form Info</label>
    </listViews>
    <listViews>
        <fullName>CBCL_Scale</fullName>
        <columns>NAME</columns>
        <columns>Gender__c</columns>
        <columns>Data_Type__c</columns>
        <columns>Page__c</columns>
        <columns>Variable__c</columns>
        <columns>Category__c</columns>
        <columns>Content__c</columns>
        <columns>Field__c</columns>
        <columns>Form__c</columns>
        <columns>Number__c</columns>
        <columns>Object__c</columns>
        <columns>Question_Field__c</columns>
        <columns>SOURCE_FORM__c</columns>
        <columns>Symptom__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Type__c</field>
            <operation>equals</operation>
            <value>DS_CBCL_SCALES</value>
        </filters>
        <label>CBCL Scale</label>
    </listViews>
    <listViews>
        <fullName>Form_Info</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>FILE_NAME__c</columns>
        <columns>Variable__c</columns>
        <columns>Page__c</columns>
        <columns>Form__c</columns>
        <columns>Object__c</columns>
        <columns>Weight__c</columns>
        <columns>Age_Range__c</columns>
        <columns>Section__c</columns>
        <columns>Content__c</columns>
        <columns>Note__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Type__c</field>
            <operation>equals</operation>
            <value>DS_Form_Info</value>
        </filters>
        <label>Form Info</label>
    </listViews>
    <listViews>
        <fullName>Form_Info_TD</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Page__c</columns>
        <columns>Form__c</columns>
        <columns>SOURCE_FORM__c</columns>
        <columns>Object__c</columns>
        <columns>Data_Type__c</columns>
        <columns>Weight__c</columns>
        <columns>Age_Range__c</columns>
        <columns>Content__c</columns>
        <columns>Section__c</columns>
        <columns>Note__c</columns>
        <columns>Gender_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Type__c</field>
            <operation>equals</operation>
            <value>DS_Form_Info</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>TD</value>
        </filters>
        <label>Form InfoTD</label>
    </listViews>
    <listViews>
        <fullName>Form_Info_baseline_content</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Page__c</columns>
        <columns>Form__c</columns>
        <columns>Content__c</columns>
        <columns>Weight__c</columns>
        <columns>Object__c</columns>
        <columns>FILE_NAME__c</columns>
        <columns>SOURCE_FORM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Type__c</field>
            <operation>equals</operation>
            <value>DS_Form_Info</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Baseline</value>
        </filters>
        <label>Form Info baseline content</label>
    </listViews>
    <listViews>
        <fullName>Form_Info_duplicate_6_7</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Data_Type__c</columns>
        <columns>FILE_NAME__c</columns>
        <columns>Variable__c</columns>
        <columns>Page__c</columns>
        <columns>SOURCE_FORM__c</columns>
        <columns>Form__c</columns>
        <columns>Object__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Type__c</field>
            <operation>equals</operation>
            <value>DS_Form_Info</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>6/7/2016 12:00 AM</value>
        </filters>
        <label>Form Info duplicate 6-7</label>
    </listViews>
    <listViews>
        <fullName>PTSD_Form_Info</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Weight__c</columns>
        <columns>Content__c</columns>
        <columns>Section__c</columns>
        <columns>Field__c</columns>
        <columns>Number__c</columns>
        <columns>Symptom__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Type__c</field>
            <operation>equals</operation>
            <value>DS_PTSD_Form_Info</value>
        </filters>
        <label>PTSD Form Info</label>
    </listViews>
    <listViews>
        <fullName>SDQ</fullName>
        <columns>NAME</columns>
        <columns>SOURCE_FORM__c</columns>
        <columns>FILE_NAME__c</columns>
        <columns>VARIABLE_LABEL__c</columns>
        <columns>VARIABLE_NAME__c</columns>
        <columns>Data_Type__c</columns>
        <columns>LONG_DESCRIPTION__c</columns>
        <columns>Object__c</columns>
        <columns>Page__c</columns>
        <columns>Variable__c</columns>
        <columns>VARIABLE_TYPE__c</columns>
        <columns>Weight__c</columns>
        <columns>Form__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>contains</operation>
            <value>SDQ</value>
        </filters>
        <label>SDQ</label>
    </listViews>
    <listViews>
        <fullName>SDQ_PSI_CDI_B_Form_Info</fullName>
        <columns>NAME</columns>
        <columns>Data_Type__c</columns>
        <columns>Content__c</columns>
        <columns>Object__c</columns>
        <columns>Form__c</columns>
        <columns>FILE_NAME__c</columns>
        <columns>Age_Range__c</columns>
        <columns>SOURCE_FORM__c</columns>
        <columns>Category__c</columns>
        <columns>Page__c</columns>
        <columns>Weight__c</columns>
        <columns>Variable__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>DS_SDQ_PSI_CDI_B</value>
        </filters>
        <label>SDQ PSI CDI B Form Info</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Trauma_detail</fullName>
        <columns>NAME</columns>
        <columns>Form__c</columns>
        <columns>Category__c</columns>
        <columns>Weight__c</columns>
        <columns>Content__c</columns>
        <columns>Note__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Type__c</field>
            <operation>equals</operation>
            <value>DS_TD_Form_Info</value>
        </filters>
        <label>Trauma detail</label>
    </listViews>
    <listViews>
        <fullName>Trauma_detail_instructions</fullName>
        <columns>NAME</columns>
        <columns>Form__c</columns>
        <columns>Category__c</columns>
        <columns>Weight__c</columns>
        <columns>Content__c</columns>
        <columns>Note__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Type__c</field>
            <operation>equals</operation>
            <value>DS_TD_Form_Info</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Instruction</value>
        </filters>
        <label>Trauma detail instructions</label>
    </listViews>
    <listViews>
        <fullName>Variable_SDQ</fullName>
        <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Data_Type__c</columns>
        <columns>FILE_NAME__c</columns>
        <columns>SOURCE_FORM__c</columns>
        <columns>Object__c</columns>
        <columns>LONG_DESCRIPTION__c</columns>
        <columns>VARIABLE_NUMBER__c</columns>
        <columns>VARIABLE_LABEL__c</columns>
        <columns>VARIABLE_NAME__c</columns>
        <columns>VARIABLE_TYPE__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Type__c</field>
            <operation>equals</operation>
            <value>DS_Variable</value>
        </filters>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>DS_SDQ_PSI_CDI_B</value>
        </filters>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>DS_SDQ_PSI_CDI_F</value>
        </filters>
        <filters>
            <field>SOURCE_FORM__c</field>
            <operation>contains</operation>
            <value>SDQ</value>
        </filters>
        <label>Variable SDQ</label>
    </listViews>
    <listViews>
        <fullName>formnum</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Data_Type__c</columns>
        <columns>Page__c</columns>
        <columns>Variable__c</columns>
        <columns>Category__c</columns>
        <columns>Content__c</columns>
        <columns>Field__c</columns>
        <columns>Number__c</columns>
        <columns>Question_Field__c</columns>
        <columns>Scale_Number__c</columns>
        <columns>SOURCE_FORM__c</columns>
        <columns>VARIABLE_LABEL__c</columns>
        <columns>VARIABLE_NAME__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>TD</value>
        </filters>
        <filters>
            <field>Data_Type__c</field>
            <operation>equals</operation>
            <value>DS_Form_Info</value>
        </filters>
        <label>formnum</label>
    </listViews>
    <nameField>
        <displayFormat>DS DATA - {000000}</displayFormat>
        <label>DS DATA ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DS DATA</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>